--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: background_on_back
 description: "Flutter plugin to handle backgound the app on pressing back button instead of quitting app."
 version: 0.0.1
-homepage:
+homepage: https://github.com/vnegi1011/background_on_back
+repository: https://github.com/vnegi1011/background_on_back
 
 environment:
   sdk: ^3.7.2
